baml_language/crates/baml_tests/snapshots/diagnostic_errors/json_alias/baml_tests__diagnostic_errors__json_alias__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 48999
---
=== PPIR ===
function user.BadAssign(j: baml.json.json) -> int  [expr] {
  {  } j
}
