baml_language/crates/baml_tests/snapshots/diagnostic_errors/json_alias/baml_tests__diagnostic_errors__json_alias__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [type] Error: type mismatch: expected int, got baml.json.json
   ╭─[ json_alias.baml:5:3 ]
   │
 5 │   j
   │   ┬  
   │   ╰── type mismatch: expected int, got baml.json.json
   │ 
   │ Note: Error code: E0001
───╯
